--- a/app/index.html
+++ b/app/index.html
@@ -89,7 +89,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
-        <script src="scripts.controllers/homeScreenS1"></script>
+        <script src="scripts/controllers/homeScreenS1.js"></script>
         <!-- endbuild -->
 </body>
 </html>
