--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
             </button>
 
             <a class="navbar-brand" href="#/">3Ttt</a>
@@ -42,7 +43,6 @@
               <li class="active"><a ng-href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/homeScreenS1">homeScreenS1</a></li>
-              <!-- <li><a ng-href="#/">Contact</a></li> -->
             </ul>
           </div>
         </div>
@@ -90,6 +90,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/homeScreenS1.js"></script>
+        <script src="scripts/controllers/courseDetails.js"></script>
         <!-- endbuild -->
 </body>
 </html>
